src/objects/NavigationElement__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag that indicates if the element is disabled.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <description>The order of the element in the flow.</description>
        <label>DisplayOrder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PageFilterUrl__c</fullName>
        <description>The Page URL to filter by. It is part of the key to search flows by.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageName__c</fullName>
        <description>The display name for the Page.</description>
        <label>PageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Access__c</fullName>
        <label>Profile Access</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprite_XY_Hover__c</fullName>
        <description>The background-position value of the HOVER STATE image location on the sprite.</description>
        <label>Sprite XY - Hover</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprite_XY_Pressed__c</fullName>
        <description>The background-position value of the PRESSED STATE image location on the sprite.</description>
        <label>Sprite XY - Pressed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprite_XY_Resting__c</fullName>
        <description>The background-position value of the RESTING STATE image location on the sprite.</description>
        <label>Sprite XY - Resting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NavigationElement</label>
</CustomObject>